--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="container clearfix">
         <!-- LOGO -->
         <div class="logo float-left">
-            <!-- immagin qui--> logo
+            <img src="img/logo.svg">
         </div>
         <!-- NAV CENTER -->
         <div class="nav-center float-left">
@@ -62,7 +62,7 @@
             <div class="container">
                 <div class="jumbotron-text w-50">
                     <h1>Scegli l'inglese studiato per i professionisti</h1>
-                    <a href="#" class="btn btn-green">
+                    <a href="#" class="btn btn-green btn-big">
                         Struttura un piano
                     </a>
                 </div>
