--- a/index.html
+++ b/index.html
@@ -68,6 +68,12 @@
                 </div>
             </div>
         </section>
+        <!-- DESCRIPTION -->
+        <section class="description">
+            <h1>Le scuole di lingua tradizionale non sono efficaci</h1>
+            <p>Solo un corso incentrato alla Fluency non può portare ad una soluzione definitiva concreta</p>
+        </section>
+
     </main>
 
 </body>
