--- a/index.html
+++ b/index.html
@@ -71,9 +71,31 @@
         <!-- DESCRIPTION -->
         <section class="description">
             <h1>Le scuole di lingua tradizionale non sono efficaci</h1>
-            <p>Solo un corso incentrato alla Fluency non può portare ad una soluzione definitiva concreta</p>
+            <p>Solo un corso incentrato sulla Fluency non può portare ad una soluzione definitiva concreta</p>
         </section>
-
+        <!-- webinfo -->
+        <section class="webinfo ">
+            <div class="content clearfix">
+                <div class="content-left float-left">
+                    <div class="imgs">
+                    <img src="./img/profile.svg" alt="profilo">
+                    </div>
+                    <h3>Piano formativo configurato sul proprio livello</h3>
+                </div>
+                <div class="content-center float-left">
+                    <div class="imgs">
+                    <img src="./img/computer.svg" alt="profilo">
+                    </div>
+                    <h3>Affiancamento costante del tutor</h3>
+                </div>
+                <div class="content-right float-left">
+                    <div class="imgs">
+                    <img src="./img/doc.svg" alt="profilo">
+                    </div>
+                    <h3>Monitora i tuoi progressi costantemente</h3>
+                </div>
+            </div>
+        </section>
     </main>
 
 </body>
