--- a/index.html
+++ b/index.html
@@ -99,6 +99,17 @@
                 </div>
             </div>
         </section>
+        <hr />
+        <!-- testinfo-->
+        <section class="testinfo">
+            <div class="container">
+                <div class="testinfo-text w-50">
+                    <h2>Scopri il tuo livello iniziale e struttura un piano personalizzato</h2>
+                    <p>L'esperienza Fluentify parte sempre da un test di placement per avere una chiara visione del tuo inglese, ad oggi.</p>
+                    <a href="#" class="link">Scopri il nostro test di placement</a>
+                </div>
+            </div>
+        </section>
     </main>
 
 </body>
