--- a/index.html
+++ b/index.html
@@ -110,6 +110,23 @@
                 </div>
             </div>
         </section>
+        <!-- FOOTER -->
+        <section class="footerindex">
+            <div class="container">
+                <div class="footer-text w-50">
+            <h2>Struttura un piano</h2>
+                </div>
+                <div class="footer-right ">
+                    <nav>
+                        <ul class="menu-inline">
+                            <li>Sono</li>
+                            <li><a href="#">Seleziona</a></li>
+                            <li><a href="#" class="btn btn-green btn-big">Visualizza il tuo piano</a></li>
+                        </ul>
+                    </nav>
+                </div>
+            </div>
+        </section>
     </main>
 
 </body>
