Add btn on footer

--- a/index.html
+++ b/index.html
@@ -120,7 +120,12 @@
                     <nav>
                         <ul class="menu-inline">
                             <li>Sono</li>
-                            <li><a href="#">Seleziona</a></li>
+                            <li>
+                                <select>
+                                    <option>Maschio</option>
+                                    <option>Femmina</option>
+                                </select>
+                            </li>
                             <li><a href="#" class="btn btn-green btn-big">Visualizza il tuo piano</a></li>
                         </ul>
                     </nav>
