--- a/index.html
+++ b/index.html
@@ -78,28 +78,29 @@
             <div class="content clearfix">
                 <div class="content-left float-left">
                     <div class="imgs">
-                    <img src="./img/profile.svg" alt="profilo">
+                        <img src="./img/profile.svg" alt="profilo">
                     </div>
                     <h3>Piano formativo configurato sul proprio livello</h3>
                     <p>Un metodo improntato sullo speaking con percorsi basati esattamente sulle esigenze personali dei partecipanti. Tutto parte da un accurato test di partenza per definire il livello e impostare gli obiettivi da raggiungere.</p>
                 </div>
                 <div class="content-center float-left">
                     <div class="imgs">
-                    <img src="./img/computer.svg" alt="profilo">
+                        <img src="./img/computer.svg" alt="profilo">
                     </div>
                     <h3>Affiancamento costante del tutor</h3>
                     <p>Scopri il syllabus, la guida per il tuo percorso. Scegli gli argomenti per passare al livello successivo e affrontali con i tutor nelle sessioni one-to-one.</p>
                 </div>
                 <div class="content-right float-left">
                     <div class="imgs">
-                    <img src="./img/doc.svg" alt="profilo">
+                        <img src="./img/doc.svg" alt="profilo">
                     </div>
                     <h3>Monitora i tuoi progressi costantemente</h3>
                     <p>Controlla i tuoi progressi con i dati elaborati dal nostra sistema. Hai il pieno controllo su miglioramenti e obiettivi raggiunti.</p>
                 </div>
             </div>
         </section>
-        <hr />
+    <!-- HR -->
+    <hr />
         <!-- testinfo-->
         <section class="testinfo">
             <div class="container">
@@ -114,7 +115,7 @@
         <section class="footerindex">
             <div class="container">
                 <div class="footer-text w-50">
-            <h2>Struttura un piano</h2>
+                    <h2>Struttura un piano</h2>
                 </div>
                 <div class="footer-right ">
                     <nav>
@@ -122,17 +123,22 @@
                             <li>Sono</li>
                             <li>
                                 <select>
+                                    <option>Seleziona</option>
                                     <option>Maschio</option>
                                     <option>Femmina</option>
+                                    <option>Entrambi</option>
                                 </select>
                             </li>
                             <li><a href="#" class="btn btn-green btn-big">Visualizza il tuo piano</a></li>
                         </ul>
                     </nav>
                 </div>
+                <!-- BTN HELP-->
+                <div class="help btn btn-green">
+                    <a href="#">Help</a>
+                </div>
             </div>
         </section>
     </main>
-
 </body>
 </html>
