Corretto codice e fatto pulizia(fine)

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         </section>
         <!-- webinfo -->
         <section class="webinfo ">
-            <div class="content clearfix">
+            <div class="container clearfix">
                 <div class="content-left float-left">
                     <div class="imgs">
                         <img src="./img/profile.svg" alt="profilo">
